data/derived/comb/progs/unify/prog1866.ml.out
Characters 78-79:
  List.fold_left f base fs;;
                 ^
Error: This expression has type (int -> int) -> int -> int
       but an expression was expected of type
         (int -> int) -> int -> int -> int
       Type int is not compatible with type int -> int 
